# cogno-praxis

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_praxis/: __init__.py  grounding.py
cogno_praxis/bookkeeper/: __init__.py  durability.py  engine.py  grounding.py  server.py  service.py  store.py
cogno_praxis/bookkeeper/prompts/: limits.txt  scope.txt  system.txt  voice.txt
cogno_praxis/bookkeeper/stores/: __init__.py  postgres.py
cogno_praxis/coordinator/: __init__.py  config.py  durability.py  server.py  service.py  store.py  types.py
cogno_praxis/coordinator/prompts/: limits.txt  scope.txt  system.txt  voice.txt
cogno_praxis/coordinator/stores/: google_sheets.py
cogno_praxis/scheduler/: __init__.py  durability.py  engine.py  grounding.py  server.py  service.py  store.py
cogno_praxis/scheduler/prompts/: limits.txt  scope.txt  system.txt  voice.txt
cogno_praxis/scheduler/stores/: postgres.py
cogno_praxis/secretary/: __init__.py  server.py  service.py  store.py
cogno_praxis/secretary/persona/: limits.txt  scope.txt  system.txt  voice.txt
docs/: BOOKKEEPER.md  BOOKKEEPER_PLAN.md  HOST_INTEGRATION.md
examples/: host_min.py  run_with_db.py  secretary_demo.py
tests/integration/: test_bookkeeper_postgres.py  test_bookkeeper_via_mcp.py  test_coordinator_google.py  test_coordinator_via_mcp.py  test_postgres_store.py  test_scheduler_via_mcp.py  test_secretary_via_mcp.py
tests/unit/: test_block_visibility.py  test_bookkeeper_engine.py  test_bookkeeper_grounding.py  test_bookkeeper_server.py  test_bookkeeper_service.py  test_coordinator.py  test_coordinator_google_store.py  test_coordinator_server.py  test_durability.py  test_grounding_locales.py  test_scheduler_engine.py  test_scheduler_grounding.py  test_scheduler_server.py  test_scheduler_service.py  test_secretary_server.py  test_secretary_service.py
