[project]
name = "cogno-praxis"
version = "0.1.0"
description = "The Cogno business verticals as standalone MCP servers (the product layer). Each vertical is an independent FastMCP server the host orchestrates via cogno-mcp; verticals own their domain logic + data behind their own store ports. First vertical: scheduler (the agenda capability), shipping the SECRETARY reception persona."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sudoers AI" }]
keywords = ["mcp", "verticals", "scheduling", "reception", "agents", "cogno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Each vertical is a FastMCP server → the mcp SDK is a real dependency here.
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-praxis"
Repository = "https://github.com/sudoers-ai/cogno-praxis"
Issues = "https://github.com/sudoers-ai/cogno-praxis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_praxis*"]

[tool.setuptools.package-data]
cogno_praxis = ["py.typed"]
"cogno_praxis.scheduler" = ["prompts/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_praxis"]
warn_unused_ignores = true
