[project]
name = "cogno-praxis"
version = "0.1.0"
description = "The Cogno business verticals as standalone MCP servers (the product layer). Each vertical is an independent FastMCP server the host orchestrates via cogno-mcp; verticals own their domain logic + data behind their own store ports. Verticals: scheduler (agenda → SECRETARY persona) and bookkeeper (finance → BOOKKEEPER persona)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Vinicius Vale" }]
maintainers = [{ name = "Sudoers AI" }]
keywords = ["mcp", "verticals", "scheduling", "reception", "agents", "cogno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Each vertical is a FastMCP server → the mcp SDK is a real dependency here.
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-praxis"
Repository = "https://github.com/sudoers-ai/cogno-praxis"
Issues = "https://github.com/sudoers-ai/cogno-praxis/issues"

[project.optional-dependencies]
# Holiday-aware availability (country/state). Without it, holiday filtering is simply off
# (the host can still inject an explicit holiday set); weekends/hours always apply.
holidays = [
    "holidays>=0.40",
]
# Postgres AppointmentStore adapter (HASH(scope)-partitioned). In-memory is the default.
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "holidays>=0.40",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_praxis*"]

[tool.setuptools.package-data]
cogno_praxis = ["py.typed"]
"cogno_praxis.scheduler" = ["prompts/*.txt"]
"cogno_praxis.bookkeeper" = ["prompts/*.txt"]
"cogno_praxis.coordinator" = ["prompts/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
# The Postgres adapter is real DB glue exercised by tests/integration against a
# live server (CI's postgres service); the unit-coverage gate measures the
# infra-free logic, so omit it here to keep the 90% floor meaningful instead of
# counting an always-skipped-in-unit adapter as 0%.
omit = ["*/scheduler/stores/postgres.py", "*/bookkeeper/stores/postgres.py"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_praxis"]
warn_unused_ignores = true
